# numba-mlir

./: .gitignore
doc/: newlangref.md
newlang/: main.py
newlang/hckernel/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
newlang/hckernel/frontend/: CMakeLists.txt
newlang/hckernel/frontend/include/hc/PyFront/: Import.hpp
newlang/hckernel/frontend/include/hckernel/PyFront/: Import.hpp
newlang/hckernel/frontend/lib/: Import.cpp
newlang/hckernel/mlir/: CMakeLists.txt
newlang/hckernel/mlir/include/hc/: InitHCDialects.hpp  InitHCPasses.hpp  Utils.hpp
newlang/hckernel/mlir/include/hc/Dialect/: CMakeLists.txt
newlang/hckernel/mlir/include/hc/Dialect/PyAST/IR/: CMakeLists.txt  PyASTOps.hpp  PyASTOps.td
newlang/hckernel/mlir/include/hc/Dialect/PyIR/IR/: CMakeLists.txt  PyIROps.hpp  PyIROps.td
newlang/hckernel/mlir/include/hc/Dialect/Typing/IR/: CMakeLists.txt  TypingOps.hpp  TypingOps.td  TypingOpsInterfaces.hpp  TypingOpsInterfaces.td
newlang/hckernel/mlir/include/hc/Dialect/Typing/Transforms/: Interpreter.hpp
newlang/hckernel/mlir/include/hc/Pipelines/: FrontendPipeline.hpp
newlang/hckernel/mlir/include/hc/Transforms/: CMakeLists.txt  ModuleLinker.hpp  Passes.hpp  Passes.td
newlang/hckernel/mlir/include/hckernel/: InitHCDialects.hpp  InitHCPasses.hpp
newlang/hckernel/mlir/include/hckernel/Dialect/PyAST/IR/: PyASTOps.hpp  PyASTOps.td
newlang/hckernel/mlir/include/hckernel/Transforms/: Passes.hpp  Passes.td
newlang/hckernel/mlir/lib/Dialect/PyAST/IR/: PyASTOps.cpp
newlang/hckernel/mlir/lib/Dialect/PyIR/IR/: PyIROps.cpp
newlang/hckernel/mlir/lib/Dialect/Typing/IR/: TypingOps.cpp
newlang/hckernel/mlir/lib/Dialect/Typing/Transforms/: Interpreter.cpp
newlang/hckernel/mlir/lib/Pipelines/: FrontendPipeline.cpp
newlang/hckernel/mlir/lib/Transforms/: ClenaupPySetVar.cpp  CompositePass.cpp  ConvertPyASTToIR.cpp  ConvertPyFuncToFunc.cpp  ConvertPyIRToTyping.cpp  DropTypeResolvers.cpp  ModuleLinker.cpp  PyIRPromoteFuncsToStatic.cpp  PyTypeInference.cpp  ReconstructPySSA.cpp  SimplifyAST.cpp
newlang/hckernel/python/: CMakeLists.txt  setup.py
newlang/hckernel/python/cpp/: CMakeLists.txt
newlang/hckernel/python/cpp/src/: CompilerFront.cpp  CompilerFront.hpp  Context.cpp  Context.hpp  DecoratorPipeline.cpp  DecoratorPipeline.hpp  Dispatcher.cpp  Dispatcher.hpp  DispatcherBase.cpp  DispatcherBase.hpp  MlirWrappers.cpp  MlirWrappers.hpp  PyModule.cpp  PyWrappers.cpp  PyWrappers.hpp  TypingDispatcher.cpp  TypingDispatcher.hpp  TypingPipeline.cpp  TypingPipeline.hpp  Utils.cpp  Utils.hpp  compiler_front.cpp
newlang/hckernel/python/hckernel/: __init__.py  bitcode_storage.py  compiler.py  dispatcher.py  indexing.py  kernel.py  kernel_api.py  kernel_sim.py  kernel_typing.py  mlir.py  settings.py  symbol_registry.py  typename.py  typing.py  utils.py
newlang/hckernel/python/hckernel/_native/: typing.mlirbc
newlang/hckernel/python/hckernel/tests/: test_examples.py  test_kernel_sim.py
newlang/hckernel/python/ir/: typing.mlir
newlang/hckernel/scripts/: runlit.py
newlang/hckernel/tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
newlang/hckernel/tests/Dialect/PyIR/: canonicalization.mlir
newlang/hckernel/tests/Dialect/typing/: canonicalization.mlir
newlang/hckernel/tests/Transforms/: cleanup-setvar.mlir  convert-py-ast-to-ir.mlir  convert-py-func-to-func.mlir  promote-funcs-to-static.mlir  reconstruct-ssa.mlir  simplify-ast.mlir  type-inference.mlir
newlang/hckernel/tests/pyfront/: ast.py  ast.pymlir
newlang/hckernel/tools/hc-opt/: CMakeLists.txt  Main.cpp
newlang/hckernel/tools/pyfront/: CMakeLists.txt  Main.cpp
newlang/newlang/: indexing.py  kernel.py
newlang/newlang/tests/: test_examples.py  test_kernel_sim.py
numba_mlir/numba_mlir/mlir/tests/: utils.py
